# pico2w-3d-renderer

./: CMakeLists.txt  LICENSE  README.md  build.sh
scripts/: script.py
src/: main.c
src/display/: display.c  display.h  renderer.c  renderer.h
src/drivers/: input.c  input.h
src/models/: test_model.h
src/utils/: color.h  type.h
